# onyx_mcp

./: .gitignore  CONTEXT.md  PAT_PLAN.md  README.md  TOOLS_LIST.md  UPLOAD_PLAN.md  config.py  go.mod  main.go  main.py  onyx.go  onyx.py  onyx_test.go  project.go  projects.py  pyproject.toml  requirements.txt  transfers.py  vdi.go  vdi.py
docs/adr/: 0001-single-use-transfer-urls.md
tests/: conftest.py  test_get_revision_file.py  test_projects.py  test_submit_vdi.py  test_transfers.py  test_vdi_return.py
